# lily

./: .gitignore  CMakeLists.txt  README  cmake.ini  cmake.py  cscope.files
doc/: Doxyfile
doc/html/: _win_sock_8cpp.html  _win_sock_8cpp__incl.map  _win_sock_8cpp__incl.md5  _win_sock_8cpp_source.html  console__color_8cpp.html  console__color_8cpp__incl.map  console__color_8cpp__incl.md5  console__color_8cpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  error_8cpp.html  error_8cpp__incl.map  error_8cpp__incl.md5  error_8cpp_source.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  inet__helper_8cpp.html  inet__helper_8cpp__incl.map  inet__helper_8cpp__incl.md5  inet__helper_8cpp_source.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  files_2.js  files_3.js  functions_3.js  functions_4.js  search.js
include/lily/: Error.h  WinSock.h  console_color.h  defs.h  error.h~  error_defs.h  inet_helper.h  lily.h  win_util.h
lib/: lily.lib  lilyd.lib
src/: CMakelists.txt  Error.cpp  WinSock.cpp  console_color.cpp  error.cpp~  inet_helper.cpp  win_util.cpp
test/: CMakeLists.txt  Error_test.cpp  WinSock_test.cpp  console_color_test.cpp  inet_helper_test.cpp  win_util_test.cpp
